Fix logo and nav on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,10 @@ footer ul li {
     padding: 5px;
 }
 
+footer ul:nth-child(2) {
+    margin-left: -40px;
+}
+
 footer ul li h3 {
     margin-bottom: 10px;
     font-size: 18px;
@@ -601,8 +605,6 @@ footer ul li a {
 footer ul li a:hover {
     color: var(--main-blue);
 }
-
-
 
 
 /************************ TABLET ************************/
@@ -700,20 +702,20 @@ footer ul li a:hover {
 
         .flex-header img {
             height: auto;
-            width: 30%;
+            width: 25%;
             margin: 20px auto;
         }
 
         /*** NAVIGATION MOBILE ***/
 
         nav ul {
-            margin-top: 40px;
+            margin-top: 20px;
             padding-left: 0%;
         }
 
         nav ul li {
             width: 50%;
-            font-size: 20px;
+            font-size: 16px;
             margin-right: 0;
         }
 
@@ -724,6 +726,14 @@ footer ul li a:hover {
         nav ul li a .line-nav:last-child {
             display: block;
         }
+
+        nav ul .active .line-nav:last-child {
+            border: solid 2px var(--main-blue);
+            background-color: var(--main-blue);
+            visibility: visible;
+        }
+
+
 
         /*** FORM MOBILE ***/
 
@@ -833,5 +843,9 @@ footer ul li a:hover {
             margin-top: 2px;
             margin-bottom: 2px;
             font-size: 15px;
+        }
+
+        footer ul:nth-child(2) {
+            margin-left: 0px;
         }
 }
